--- a/src/main/webapp/css/first.css
+++ b/src/main/webapp/css/first.css
@@ -7,10 +7,13 @@ background-color: #FFFDE7;
 	
 }
 
-
+.star {
+   color: red; /* Make it red */
+   font-size: 8px;
+}
 .stvcard {
-  box-shadow: 0 4em 4em 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
+  box-shadow: 0 2.5em 2.5em 0 rgba(0, 0, 0, 0.2);
+  max-width: 250px;
   margin: auto;
   text-align: center;
   font-family: arial;
@@ -21,7 +24,7 @@ background-color: #FFFDE7;
   font-size: 18px;
 }
 
-button {
+.cardbutton {
   border: none;
   outline: 0;
   display: inline-block;
@@ -44,15 +47,22 @@ button:hover, a:hover {
   opacity: 0.7;
 }
 
+#btsbt{
+	
+	width: 100%;
+}
+
 .button {
   border-radius: 4px;
-  background-color: #f4511e;
+  background-color: #FF5252;
   border: none;
   color: #FFFFFF;
   text-align: center;
   font-size: 28px;
   padding : 1px;
-  
+  width:95%;
+  margin-left:24px;
+ 
   transition: all 0.5s;
   cursor: pointer;
   
@@ -83,5 +93,104 @@ button:hover, a:hover {
   right: 0;
 }
 
+.buttonload {
+    background-color: #4CAF50; /* Green background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 5px ; /* Some padding */
+    width: 100%;
+    font-size: 16px; /* Set a font-size */
+    display: none;
+}
+.fa {
+    margin-left: -12px;
+    margin-right: 8px;
+}
 
+textarea {
+   resize: none;
+}
+
+#commenttrue{
+	
+	position: absolute;
+}
+
+#mailtrue{
+	
+	position: absolute;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 210px; /* Location of the box */
+    padding-left:30px;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+    position: relative;
+    background-color: #FFE57F;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 30%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {left:-300px; opacity:0} 
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {left:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: red;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #fefefe;
+    border:none;
+    color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+
+
+
+
+
+
+   
 
